@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  02 Sep 2015; Sean Vig <sean.v.775@gmail.com> ipyparallel-9999.ebuild:
+  dev-python/ipyparallel: Add doc use flag
+
 *ipyparallel-4.0.0-r1 (01 Sep 2015)
 
   01 Sep 2015; Marius Brehler <marbre@linux.sungazer.de>
